2004-04-30  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-04-30  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/Makefile.am: Add mozilla main include directory,
	needed for Mozilla 1.7 (headers changed location).

2004-04-07  Christian Neumair  <chris@gnome-de.org>

	* autogen.sh: automake 1.8 is required, but error message suggested
	that automake 1.4 is required. Fixed that.

2004-04-03  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-17  Mikael Hallendal  <micke@imendio.com>

	* devhelp.schemas.in:
	* src/dh-preferences.h:
	* src/dh-window.c: (window_init), (window_populate),
	(window_save_state), (window_restore_state), (dh_window_new):
	- Make the maximized stuff a boolean instead of storing window state.
	- Fixes #137532

2004-03-17  Mikael Hallendal  <micke@imendio.com>

	* devhelp.schemas.in:
	* src/dh-preferences.h:
	* src/dh-window.c: 
	- Save state regarding maximized or not.
	- Patch by Paolo Borelli.

2004-03-17  Mikael Hallendal  <micke@imendio.com>

	* devhelp.in: 
	- Export LD_LIBRARY_PATH, thanks Michel Galle for reporting.

2004-03-17  Mikael Hallendal  <micke@imendio.com>

	* Release 0.9

	* NEWS: Updated for 0.9
	* configure.in: Bumped version to 0.9
	* src/Makefile.am: Fixed the genmarshal-crap

2004-03-16  Mikael Hallendal  <micke@imendio.com>

	* src/dh-base.c:
	* src/dh-html.c:
	* src/dh-window.c:
	- Make the HTML view white for now.

2004-03-16  Mikael Hallendal  <micke@imendio.com>

	* src/Makefile.am:
	* src/dh-history.c:
	* src/dh-history.h:
	- Removed
	* src/dh-html.c:
	- Added support for gecko's builtin history list.
	* src/dh-window.c:
	- Make history work again.

2004-03-16  Mikael Hallendal  <micke@imendio.com>

	* src/dh-preferences.c:
	* ui/devhelp.glade:
	- Really make the dialog transient.
	* ui/window.ui: Hide Copy for now.

2004-03-16  Mikael Hallendal  <micke@imendio.com>

	* autogen.sh: Require automake 1.8
