@@ -1,3 +1,9 @@
+2004-05-06  Mikael Hallendal  <micke@imendio.com>
+
+	* src/dh-keyword-model.c: (dh_keyword_model_filter):
+	- If exact match is found, return it so that we can show it in the
+	  HTML view. Patch by Marc Britten.
+
 2004-04-30  Adam Weinberger  <adamw@gnome.org>
 
 	* configure.in: Added en_CA to ALL_LINGUAS.
